[tool.poetry]
name = "solus"
version = "1.2.0"
description = "Singleton types."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/solus"
repository = "https://github.com/nekitdev/solus"
documentation = "https://nekitdev.github.io/solus"

keywords = ["python", "singleton"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Chat = "https://nekit.dev/chat"
Funding = "https://nekit.dev/funding"
Issues = "https://github.com/nekitdev/solus/issues"

[[tool.poetry.packages]]
include = "solus"

[tool.poetry.dependencies]
python = ">= 3.8"

named = "^1.4.0"

[tool.poetry.group.format.dependencies]
ruff = "0.2.2"

[tool.poetry.group.check.dependencies]
mypy = "1.8.0"

[tool.poetry.group.test.dependencies]
coverage = "7.4.3"
pytest = "8.0.2"
pytest-cov = "4.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.11"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.poetry.group.dev.dependencies]
changelogging = "1.4.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov solus"
testpaths = ["tests"]

[tool.coverage.run]
source = ["solus"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@abstractmethod",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

[tool.changelogging]
name = "solus"
version = "1.2.0"
url = "https://github.com/nekitdev/solus"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
